--- a/css/style.css
+++ b/css/style.css
@@ -176,15 +176,6 @@ section h2{
 	display:inline
 }
 
-.other_members{
-	width: 100%;
-	height: 200px;
-	background-color:#953232;
-	color:white;
-	position: relative;
-	text-align: center;
-}
-
 .other_members p{
 	position: absolute;
 	top: 50%;
@@ -308,6 +299,10 @@ section h2{
 	font-weight:bold;
 }
 
+#sec05 iframe{
+	border-radius: 1.5px;
+}
+
 .link_wrapper{
 	background-color: #2b2b2b;
 	width: auto;
@@ -315,6 +310,11 @@ section h2{
 	overflow: hidden;
 	text-align: center;
 	padding-bottom: 50px;
+	border-radius: 5px;
+}
+
+.link_wrapper_inner{
+	display: inline-block;
 }
 
 .link_wrapper img{
@@ -328,7 +328,7 @@ section h2{
 	float: left;
 } 
 
-.link_content1{
+.link_content_leftside{
 	border-right: #ccc solid 1px;
 }
 
@@ -609,6 +609,7 @@ input[type="reset"]{
   #footer{
 		padding: 30px 10px 70px 0;
 	}
+
 }
 
 @media only screen and (max-width: 1280px){
@@ -640,6 +641,23 @@ input[type="reset"]{
 	.vMid{
 		padding: 0 20px;
 	}
+
+	/* sec05 各種スケジュール 
+	------------------------------*/
+
+	.link_wrapper_responsive{
+		display: flex;
+		justify-content: center;
+	}
+
+	.link_wrapper li{
+		width: 100%;
+		list-style-type: none;
+		text-align: center;
+		padding-bottom: 20px;
+	}
+
+
 }
 
 @media only screen and (max-width: 1180px){
@@ -843,6 +861,27 @@ input[type="reset"]{
 		display:none;
 	}
 
+	/* sec05 各種スケジュール
+	------------------------------*/
+	.link_wrapper{
+		margin: 25px;
+	}
+
+	.link_content{
+		text-align: center;
+		display: inline-block;
+	}	
+
+	.schedule{
+		width: 100%;
+	}
+
+	.link_content_leftside{
+		border-right: none;
+		margin-bottom: 25px;
+	}
+
+	
 }
 
 @media only screen and (max-width: 799px){
@@ -886,13 +925,14 @@ input[type="reset"]{
 
 	/* sec05 各種スケジュール
 	------------------------------*/
-	.schedule{
+	/* .schedule{
 		width: 100%;
 	}
 
-  .text br {
-    display: none;
-	}
+	.link_content_leftside{
+		border-right: none;
+		margin-bottom: 25px;
+	} */
 	
 	/* sec06 ご依頼・お問合せ 
 	------------------------------*/
@@ -930,4 +970,25 @@ input[type="reset"]{
 		width: auto;
 		height: auto;
 	}	
+
+	/* sec05 各種スケジュール
+	------------------------------*/
+
+	.link_wrapper{
+		margin: 5px;
+	}
+
+	.link_wrapper img{
+		width: 90%;
+	}
+
+	.link_wrapper p{
+		width: 90%;
+		text-align: center;
+		display: inline-block;
+	}
+
+	#sec05 .sec05linktitle {
+    padding-top: 30px;
+  }
 }
