Change sec03 title, movie, etc..

--- a/css/style.css
+++ b/css/style.css
@@ -184,7 +184,7 @@ section h2{
 	-webkit- transform: translateY(-50%) translateX(-50%);
 }
 
-/* SEC03 そもそもハマチャチャとは
+/* SEC03 ハマチャチャとは
 ------------------------------------------------------------*/
 
 #sec03 .ref_article{
