--- a/css/style.css
+++ b/css/style.css
@@ -127,6 +127,40 @@ section h2{
 	color: #55ACEE;
 }
 
+/* エフェクト関係(intersection-observer.jsより)
+------------------------------------------------------------*/
+
+.raisewithbigtittle {
+	transition: opacity 1.4s, transform 4s;
+	opacity: 0;
+	transform: scale(0.9, 0.9);
+}
+.raisewithbig {
+	transition: opacity 1.4s, transform 1.5s;
+	opacity: 0;
+	transform: scale(0.9, 0.9);
+}
+.raisetoup {
+	transition: opacity 1.4s, transform 1.5s;
+	opacity: 0;
+	transform: translateY(40px);
+}
+.raisetoright {
+	transition: opacity 1.4s, transform 1.5s;
+	opacity: 0;
+	transform: translatex(-40px);
+}
+.raisetoleft {
+	transition: opacity 1.4s, transform 1.5s;
+	opacity: 0;
+	transform: translatex(40px);
+}
+.show {
+	opacity: 1;
+	transform: translateY(0);
+}
+
+
 /* SEC01 関東ハマチャチャ同好会紹介
 ------------------------------------------------------------*/
 
