--- a/css/style.css
+++ b/css/style.css
@@ -130,8 +130,13 @@ section h2{
 /* エフェクト関係(intersection-observer.jsより)
 ------------------------------------------------------------*/
 
-.raisewithbigtittle {
-	transition: opacity 1.4s, transform 4s;
+.raisewithbigtittle1{
+	transition: opacity 5.0s, transform 4s;
+	opacity: 0;
+	transform: scale(0.9, 0.9);
+}
+.raisewithbigtittle2{
+	transition: opacity 10.0s, transform 4s;
 	opacity: 0;
 	transform: scale(0.9, 0.9);
 }
