--- a/css/style.css
+++ b/css/style.css
@@ -169,6 +169,30 @@ section h2{
 /* SEC01 関東ハマチャチャ同好会紹介
 ------------------------------------------------------------*/
 
+.whats_new_wrapper{
+	background-color: #2b2b2b;
+	width: auto;
+	margin: 50px;
+	overflow: hidden;
+	text-align: center;
+	padding-bottom: 50px;
+	border-radius: 5px;
+}
+
+.whats_new_wrapper .under{
+	background: linear-gradient(transparent 80%, orange 80%);
+}
+
+.whats_new_wrapper .title{
+	font-weight: 700;
+}
+
+.whats_new_wrapper a{
+	color: #fff;
+	font-weight: 700;
+	text-decoration: underline;
+}
+
 .introduction
 {
 	width: 60%;
@@ -675,6 +699,20 @@ input[type="reset"]{
 		padding: 50px 0 20px;
 	}
 
+	/* ↓使ってないが一応配置 */
+	.whats_new_wrapper_responsive{
+		display: flex;
+		justify-content: center;
+	}
+
+	.whats_new_wrapper li{
+		width: 100%;
+		list-style-type: none;
+		text-align: center;
+		padding-bottom: 20px;
+	}
+	/* ↑使ってないが一応配置 */
+
 	/* sec01 sec02 代表・副代表紹介
 	------------------------------*/
 	.vMid{
@@ -695,7 +733,6 @@ input[type="reset"]{
 		text-align: center;
 		padding-bottom: 20px;
 	}
-
 
 }
 
@@ -896,6 +933,9 @@ input[type="reset"]{
 
 	/* sec01 代表・副代表より
 	------------------------------*/
+	.whats_new_wrapper{
+		margin: 25px;
+	}
 	.photo_pc{
 		display:none;
 	}
@@ -1009,6 +1049,23 @@ input[type="reset"]{
 		width: auto;
 		height: auto;
 	}	
+
+	/* sec01 関東ハマチャチャ同好会紹介 
+	------------------------------*/
+
+	.whats_new_wrapper{
+		margin: 25px;
+	}
+
+	.whats_new_wrapper img{
+		width: 90%;
+	}
+
+	.whats_new_wrapper p{
+		width: 90%;
+		text-align: center;
+		display: inline-block;
+	}
 
 	/* sec05 各種スケジュール
 	------------------------------*/
