--- a/css/style.css
+++ b/css/style.css
@@ -175,7 +175,7 @@ section h2{
 	margin: 50px;
 	overflow: hidden;
 	text-align: center;
-	padding-bottom: 50px;
+	padding: 0 20px 50px 20px;
 	border-radius: 5px;
 }
 
